--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -1,6 +1,52 @@
-body{
-    background-color: #cccccc;
-    display: flex;
-    border-radius: 5px;
-    transform: scale(1.5);
+/*----------
+   Default
+------------*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+/*----------
+   Header
+------------*/
+.header{
+    height: 50px;
+    width: 100%;
+    background-image: linear-gradient(to right, #0ea4be, #08859b);
+
+    &-logo{
+        text-align: center;
+    }
+}
+
+/*----------
+   Params
+------------*/
+.params{
+
+
+    &-field{
+        margin: 20px 0;
+        position: relative;
+
+        label{
+            position: absolute;
+            top: 0;
+            z-index: -1;
+        }
+
+        input{
+            width: 400px;
+            border: none;
+            border-bottom: 1px solid #cccccc;
+            background-color: transparent;
+        }
+    }
 }
